歴史関連のリンクテキストを更新し、スタイルを改善

--- a/history/term2/print4.html
+++ b/history/term2/print4.html
@@ -141,6 +141,14 @@
             color: #d35400;
             text-shadow: none;
         }
+
+        a {
+            color: #ffa500;
+        }
+
+        .light-mode a {
+            color: #93c400;
+        }
     </style>
 </head>
 
@@ -276,6 +284,14 @@
 ＝漂着した外国船に燃料や食料・水の補給を認める</br>
 異国船打払令を廃止</br>
 ・1844年，オランダ国王の親書＝幕府に開国を勧告→幕府は拒否</br>
+
+<p>
+	<a href="print1.html">⑫革命の時代の到来</a>・
+	<a href="print2.html">④自由主義と国民主義の進展</a>・
+	<a href="print3.html">⑤帝国主義の成立と列強の情勢</a>・
+	<a href="print4.html">日本史前提知識</a>・
+	<a href="print5.html">①開国と開港</a>
+</p>
 
 <script>
 	// 初期化：全てを非表示（空白）に
