--- a/history/term2/print5.html
+++ b/history/term2/print5.html
@@ -141,6 +141,14 @@
             color: #d35400;
             text-shadow: none;
         }
+
+        a {
+            color: #ffa500;
+        }
+
+        .light-mode a {
+            color: #93c400;
+        }
     </style>
 </head>
 
@@ -249,6 +257,14 @@
 ・輸出の増大につれて，関東地方や信濃・甲斐などの各地で養蚕業や製糸業が急速に発展した</br>
 ・国内の綿織物生産地は打撃を受けたが，やがて織物業者たちは，輸入綿糸を使って輸入綿布に対抗していった</br>
 →開港によって，それまでの経済のしくみがしだいに解体され，新たな経済のしくみが生まれることになった</br>
+
+<p>
+	<a href="print1.html">⑫革命の時代の到来</a>・
+	<a href="print2.html">④自由主義と国民主義の進展</a>・
+	<a href="print3.html">⑤帝国主義の成立と列強の情勢</a>・
+	<a href="print4.html">日本史前提知識</a>・
+	<a href="print5.html">①開国と開港</a>
+</p>
 
 <script>
 	// 初期化：全てを非表示（空白）に
