--- a/history/term2/print1.html
+++ b/history/term2/print1.html
@@ -141,6 +141,14 @@
             color: #d35400;
             text-shadow: none;
         }
+
+        a {
+            color: #ffa500;
+        }
+
+        .light-mode a {
+            color: #93c400;
+        }
     </style>
 </head>
 
@@ -256,6 +264,14 @@
 ・意義＝広大な領域国家での共和政実現→絶対王政のヨーロッパ諸国に衝撃</br>
 ・問題点＝黒人奴隷制の継続→黒人の権利の無視</br>
 アパラチア山脈以西への入植解禁→先住民の権利の無視</br>
+
+<p>
+	<a href="print1.html">⑫革命の時代の到来</a>・
+	<a href="print2.html">④自由主義と国民主義の進展</a>・
+	<a href="print3.html">⑤帝国主義の成立と列強の情勢</a>・
+	<a href="print4.html">日本史前提知識</a>・
+	<a href="print5.html">①開国と開港</a>
+</p>
 
 <script>
 	// 初期化：全てを非表示（空白）に
