--- a/history/term2/print2.html
+++ b/history/term2/print2.html
@@ -141,6 +141,14 @@
             color: #d35400;
             text-shadow: none;
         }
+
+        a {
+            color: #ffa500;
+        }
+
+        .light-mode a {
+            color: #93c400;
+        }
     </style>
 </head>
 
@@ -262,6 +270,14 @@
 を宣言(1890年代)</br>
 ・世界中から多様な移民(宗教・言語・生活習慣)の受け入れ→独自の民主主義社会を形成</br>
 ⇔先住民・奴隷に対する差別の残存</br>
+
+<p>
+	<a href="print1.html">⑫革命の時代の到来</a>・
+	<a href="print2.html">④自由主義と国民主義の進展</a>・
+	<a href="print3.html">⑤帝国主義の成立と列強の情勢</a>・
+	<a href="print4.html">日本史前提知識</a>・
+	<a href="print5.html">①開国と開港</a>
+</p>
 
 <script>
 	// 初期化：全てを非表示（空白）に
