--- a/history/term2/print3.html
+++ b/history/term2/print3.html
@@ -141,6 +141,14 @@
             color: #d35400;
             text-shadow: none;
         }
+
+        a {
+            color: #ffa500;
+        }
+
+        .light-mode a {
+            color: #93c400;
+        }
     </style>
 </head>
 
@@ -269,6 +277,14 @@
 ・
 <span class="toggle-text" data-original-text="ハワイ" onclick="toggleText(this)"></span>
 ＝1898年：ハワイ王国の女王を退位させた(1893年)のちに併合</br>
+
+<p>
+	<a href="print1.html">⑫革命の時代の到来</a>・
+	<a href="print2.html">④自由主義と国民主義の進展</a>・
+	<a href="print3.html">⑤帝国主義の成立と列強の情勢</a>・
+	<a href="print4.html">日本史前提知識</a>・
+	<a href="print5.html">①開国と開港</a>
+</p>
 
 <script>
 	// 初期化：全てを非表示（空白）に
