--- a/history/term2/templateBack.html
+++ b/history/term2/templateBack.html
@@ -1,3 +1,11 @@
+<p>
+	<a href="print1.html">⑫革命の時代の到来</a>・
+	<a href="print2.html">④自由主義と国民主義の進展</a>・
+	<a href="print3.html">⑤帝国主義の成立と列強の情勢</a>・
+	<a href="print4.html">日本史前提知識</a>・
+	<a href="print5.html">①開国と開港</a>
+</p>
+
 <script>
 	// 初期化：全てを非表示（空白）に
 	document.addEventListener("DOMContentLoaded", () => {
