--- a/history/term2/print4.html
+++ b/history/term2/print4.html
@@ -22,6 +22,7 @@
             body {
                 max-width: 95%;
                 padding: 10px;
+                font-size: 1.5rem;
             }
         }
 
